--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>5.1.5.RELEASE</version>
 		</dependency>
+		<!-- spring security -->
+		<dependency>
+ 		   <groupId>org.springframework.boot</groupId>
+  		  <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
